--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -580,7 +580,19 @@ html {
   padding: 10px;
   width: 90%;
 }
-
+ #link-cv{
+  width: 220px;
+  height: 60px;
+  background-color: #0473c2;
+  color: white;
+  padding: 10px;
+  border-radius: 30px;
+  font-size: 14px;
+}
+#link-cv:hover{
+  background-color: #091f30;
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1)
+}
 .about-us .about-row .image-col .btn {
   margin-top: 40px;
   width: 90%;
